--- a/src/main/resources/templates/client/menu.html
+++ b/src/main/resources/templates/client/menu.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" style="height: 60px">
     <div class="navbar navbar-light bg-light fixed-top" style="margin-left: 8%; margin-right: 8%">
 
-        <a class="navbar-brand" href="/publisher/home" >
+        <a class="navbar-brand" href="" >
             <img src="https://tuyendunghaiphong.net/image/employers/1706/avatar/635962345114087865.png" style="height: 29px" class="d-inline-block align-top" alt="">
         </a>
 
