--- a/src/main/resources/templates/addPost.html
+++ b/src/main/resources/templates/addPost.html
@@ -52,7 +52,7 @@
         <li><a th:class="${status ==1? 'active':''}" th:href="@{/home/kham-pha}">Khám phá</a></li>
         <li><a th:class="${status ==2? 'active':''}" th:href="@{/post/add}">Đăng bài</a></li>
         <li><a th:class="${status ==3? 'active':''}" th:href="@{/home/profile}">Tường của bản thân</a></li>
-        <li><a th:class="${status ==4? 'active':''}" th:href="@{/home/lock-out}">Lock out</a></li>
+        <li><a th:class="${status ==4? 'active':''}" th:href="@{/home/log-out}">Log out</a></li>
     </ul>
 
     <div style="margin-left:25%;padding:1px 16px;height:1000px">
